# 487-workshops

python-chat/: broadcast.txt  broadcast_log.txt  pychat.py  readme.md  requirements.txt.txt
secure-chat/: README.md  pyproject.toml  requirements.txt
secure-chat/src/: client.py  common.py  main.py  message.py  message_types.py  network.py  security.py  session_keys.py
workshop-1-netcat-chat-mhrfky/: README.md  chat.py  requirements.txt
zeroconf-chat/: broadcast.txt  deniz.txt
