[tool.poetry]
name = "workshop-6"
version = "0.1.0"
description = ""
authors = ["Yahya Bedirhan Pak <y.bedirhanpak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyDes = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
